--- a/perinf/tsconfig.json
+++ b/perinf/tsconfig.json
@@ -10,6 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "moduleResolution": "node",
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
